# MacWM

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.gradle.kts  build.sh  local.properties  settings.gradle.kts  xinitrc
src/: assert.cpp  decorations.cpp  decorations.hpp  desktop.cpp  desktop.hpp  hotkeys.cpp  hotkeys.hpp  main.cpp  menu.cpp  menu.hpp  util.cpp  util.hpp  window_manager.cpp  window_manager.hpp  x_utils.cpp  x_utils.hpp
src/linuxX64Main/kotlin/com/macwm2/: Compositor.kt  Dock.kt  Main.kt  Window.kt
src/linuxX64Main/kotlin/ru/denis0001dev/macwm/: Logging.kt  Main.kt  Util.kt  WindowManager.kt  XUtils.kt
src/linuxX64Main/kotlin/ru/denis0001dev/util/: FileUtil.kt  Utils.kt
src/main/: assert.hpp  logging.cpp  logging.hpp  main.cpp  util.cpp  util.hpp  window_manager.cpp  x_utils.cpp  x_utils.hpp
src/nativeInterop/cinterop/: X.def  Xlib.def  Xutil.def  wayland-client-core.def  wayland-client-protocol.def  wayland-client.def  wayland-cursor.def  wayland-egl-core.def  wayland-egl.def  wayland-util.def  wayland-version.def
src/wallpaper/: main.cpp
src_wallpaper/: CMakeLists.txt  main.cpp
